inplemented models. website is fully functional, still working on some extra features.

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ app/__pycache__/
 openresume/__pycache__/
 latexFile.log
 static/pdfs/latexFile.pdf
+static/datafile.txt
 app/migrations/__pycache__/
 **/__pycache__
 db.sqlite3
