--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\hp\\anaconda3\\envs\\myEnv1\\python.exe"
+    "python.pythonPath": "venv\\Scripts\\python.exe"
 }
